RESOLVED FIXED180181
RenderMultiColumnFlow::fragmentedFlowDescendantInserted should not destroy incoming newDescendant
https://bugs.webkit.org/show_bug.cgi?id=180181
Summary RenderMultiColumnFlow::fragmentedFlowDescendantInserted should not destroy in...
alan
Reported 2017-11-29 21:48:16 PST
ssia.
Attachments
Patch (7.94 KB, patch)
2017-11-29 21:50 PST, alan
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (2.27 MB, application/zip)
2017-11-29 22:47 PST, EWS Watchlist
no flags
Patch (8.07 KB, patch)
2017-12-04 15:43 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2017-11-29 21:50:10 PST
alan
Comment 2 2017-11-29 21:50:20 PST
EWS Watchlist
Comment 3 2017-11-29 22:47:20 PST
Comment on attachment 327952 [details] Patch Attachment 327952 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5414116 New failing tests: credentials/idlharness.html
EWS Watchlist
Comment 4 2017-11-29 22:47:22 PST
Created attachment 327954 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
alan
Comment 5 2017-11-30 07:19:15 PST
Comment on attachment 327954 [details] Archive of layout-test-results from ews101 for mac-elcapitan Looks unrelated.
alan
Comment 6 2017-12-04 15:43:15 PST
WebKit Commit Bot
Comment 7 2017-12-04 16:51:05 PST
Comment on attachment 328399 [details] Patch Clearing flags on attachment: 328399 Committed r225506: <https://trac.webkit.org/changeset/225506>
WebKit Commit Bot
Comment 8 2017-12-04 16:51:06 PST
All reviewed patches have been landed. Closing bug.
alan
Comment 9 2017-12-07 13:10:33 PST
*** Bug 180179 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.