RenderMultiColumnFlow::fragmentedFlowDescendantInserted should not destroy incoming newDescendant https://bugs.webkit.org/show_bug.cgi?id=180181

Reviewed by Antti Koivisto.

This is in preparation for having all multicolumn related tree mutation in RenderTreeUpdaterMultiColumn.

Covered by fast/multicol/column-span-range-crash.html

* rendering/RenderMultiColumnFlow.cpp:
(WebCore::RenderMultiColumnFlow::fragmentedFlowDescendantInserted):
* rendering/RenderMultiColumnFlow.h:
* style/RenderTreeUpdaterMultiColumn.cpp:
(WebCore::RenderTreeUpdater::MultiColumn::destroyFragmentedFlow):


Canonical link: https://commits.webkit.org/196347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225506 268f45cc-cd09-0410-ab3c-d52691b4dbfc